@@ -5,13 +5,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import pl.test.coding.common.ReasonForVisit;
 import pl.test.coding.common.Specialization;
+import pl.test.coding.doctor.exception.SpecializationNotFoundException;
 import pl.test.coding.doctor.model.Doctor;
 import pl.test.coding.doctor.model.dto.DoctorDto;
 
-import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -27,17 +25,18 @@ public class DoctorService {
         doctorRepository.save(doctor);
     }
 
-    public Set<String> findUniqueDoctorLastNames() {
+    public List<String> findUniqueDoctorLastNames() {
         return doctorRepository.findAll().stream()
                 .map(Doctor::getLastName)
-                .collect(Collectors.toCollection(HashSet::new));
+                .distinct()
+                .toList();
     }
 
     public List<DoctorDto> findDoctorsByReason(ReasonForVisit reason) {
         Specialization specialization = mapReasonToSpecialization(reason);
         return doctorRepository.findBySpecialization(specialization).stream()
                 .map(DoctorDto::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private Specialization mapReasonToSpecialization(ReasonForVisit reason) {
@@ -48,12 +47,7 @@ public class DoctorService {
             case CHOLESTEROL_PROBLEM -> Specialization.DERMATOLOGY;
             case MIGRAINE, DIABETE -> Specialization.FAMILY_MEDICINE;
             case HIGH_BLOOD_PRESSURE -> Specialization.HERMATOLOGY;
-            default -> throw new IllegalArgumentException("No matching specialization for given reason");
+            default -> throw new SpecializationNotFoundException();
         };
-    }
-
-    @Transactional
-    public void deleteById(int idToDelete) {
-        doctorRepository.deleteById(idToDelete);
     }
 }
